src/OpenCvSharpExtern/xfeatures2d.h

CVAPI(ExceptionStatus) xfeatures2d_Ptr_SURF_delete(cv::Ptr<cv::xfeatures2d::SURF> *ptr)
{
    return cvTry([&] {
        delete ptr;
    });
}
CVAPI(ExceptionStatus) xfeatures2d_Ptr_SURF_get(cv::Ptr<cv::xfeatures2d::SURF> *obj, cv::xfeatures2d::SURF **returnValue)
{
    return cvTry([&] {
        *returnValue = obj->get();
    });
}
CVAPI(ExceptionStatus) xfeatures2d_SURF_getHessianThreshold(cv::xfeatures2d::SURF *obj, double *returnValue)
{
    return cvTry([&] {
        *returnValue = obj->getHessianThreshold();
    });
}
CVAPI(ExceptionStatus) xfeatures2d_SURF_getNOctaves(cv::xfeatures2d::SURF *obj, int *returnValue)
{
    return cvTry([&] {
        *returnValue = obj->getNOctaves();
    });
}
CVAPI(ExceptionStatus) xfeatures2d_SURF_getNOctaveLayers(cv::xfeatures2d::SURF *obj, int *returnValue)
{
    return cvTry([&] {
        *returnValue = obj->getNOctaveLayers();
    });
}
CVAPI(ExceptionStatus) xfeatures2d_SURF_getExtended(cv::xfeatures2d::SURF *obj, int *returnValue)
{
    return cvTry([&] {
        *returnValue = obj->getExtended() ? 1 : 0;
    });
}
CVAPI(ExceptionStatus) xfeatures2d_SURF_getUpright(cv::xfeatures2d::SURF *obj, int *returnValue)
{
    return cvTry([&] {
        *returnValue = obj->getUpright() ? 1 : 0;
    });
}
CVAPI(ExceptionStatus) xfeatures2d_SURF_setHessianThreshold(cv::xfeatures2d::SURF *obj, double value)
{
    return cvTry([&] {
        obj->setHessianThreshold(value);
    });
}
CVAPI(ExceptionStatus) xfeatures2d_SURF_setNOctaves(cv::xfeatures2d::SURF *obj, int value)
{
    return cvTry([&] {
        obj->setNOctaves(value);
    });
}
CVAPI(ExceptionStatus) xfeatures2d_SURF_setNOctaveLayers(cv::xfeatures2d::SURF *obj, int value)
{
    return cvTry([&] {
        obj->setNOctaveLayers(value);
    });
}
CVAPI(ExceptionStatus) xfeatures2d_SURF_setExtended(cv::xfeatures2d::SURF *obj, int value)
{
    return cvTry([&] {
        obj->setExtended(value != 0);
    });
}
CVAPI(ExceptionStatus) xfeatures2d_SURF_setUpright(cv::xfeatures2d::SURF *obj, int value)
{
    return cvTry([&] {
        obj->setUpright(value != 0);
    });
}